# mtt_project

./: db.sqlite3  manage.py  populate_data.py  pyproject.toml  robots.txt
core/: admin.py  custom_admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_calculatoroption_district_faq_formconfig_herosection_and_more.py  0003_alter_orderstep_icon.py  0004_alter_orderstep_number_icon.py
core/templates/: about.html  aeroport.html  base.html  ceny.html  contacts.html  deshevo.html  dlya-spectehniki.html  evakuaciya-posle-dtp.html  evakuator-v-oblasti.html  footer.html  gruzovoi.html  header.html  index.html  kalkulyator.html  kogda-i-zachem-vyzyvat-evakuator-v-moskve.html  legkovoy.html  manipulyator.html  mesta-evakuacii.html  mezjgorod.html  modals.html  motoevakuator.html  oferta.html  onlayn-oplata.html  otzyvy.html  po-beznalu.html  po-derevnyam.html  po-gorodu.html  po-metro.html  po-moskve.html  po-okrugam.html  po-rayonam.html  politika-cookies.html  politika-konfidencialnosti.html  polzovatelskoe-soglashenie.html  test.html
mtt_project/: asgi.py  settings.py  urls.py  wsgi.py
na-schosse/: index.html
na-schosse/afanasovskoe-shosse/: index.html
na-schosse/altufevskoe-shosse/: index.html
na-schosse/aminevskoe-shosse/: index.html
na-schosse/andronovskoe-shosse/: index.html
na-trasse/: index.html
novomoskovskiy/: index.html
skolko-stoit-1-km-evakuatora/: index.html
stati/: index.html
troick/: index.html
uslugi-evakuatora/: index.html
v-kakih-sluchayah-neobhodim-evakuator/: index.html
zelenograd/: index.html
(+148 files in other folders)
